fixed background parallax on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -13,3 +13,8 @@ body {
   height: 100%;
   background-color: #464646;
 }
+@media only screen and (max-width: 900px) {
+  .body {
+    background-attachment: scroll;
+  }
+}
